<resources>
    <string name="app_name">Debtomania</string>
    <string name="action_add">Add</string>
    <string name="debt_details">from %1$s, %2$s</string>
    <string name="debts">Debts</string>
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_general_dark_mode">Dark mode</string>
    <string name="settings_about">Debtomania by loidsemus</string>
    <string name="add_done">Done</string>
    <string name="add_amount">Amount you\'re owed</string>
    <string name="add_who">Who owes you</string>
    <string name="no_debts">No debts</string>
    <string name="no_debts_sub">You\'re not owed anything!</string>
    <string name="debt_deleted">Debt deleted</string>
    <string name="debt_archived">Debt archived</string>
    <string name="add_error_no_amount">You need to specify an amount</string>
    <string name="add_error_no_name">You need to specify a name</string>
</resources>
