<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navigation" app:startDestination="@id/debtsFragment">

    <fragment android:id="@+id/debtsFragment" android:name="me.loidsemus.debtomania.screens.debts.DebtsFragment"
              android:label="@string/debts">
        <action android:id="@+id/action_debtsFragment_to_addFragment" app:destination="@id/addFragment"
                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment android:id="@+id/addFragment" android:name="me.loidsemus.debtomania.screens.add.AddFragment"
              android:label="@string/action_add"/>

    <fragment
            android:id="@+id/settingsFragment"
            android:name="me.loidsemus.debtomania.screens.settings.SettingsFragment"
    android:label="@string/settings"/>

    <action android:id="@+id/open_settings_fragment"
            app:destination="@id/settingsFragment" app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
</navigation>